--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "@types/node": "18.14.0",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
+        "add": "^2.0.6",
         "axios": "^1.3.4",
+        "cookie": "^0.5.0",
         "cookies-next": "^2.1.1",
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
@@ -26,7 +28,9 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.8",
-        "typescript": "4.9.5"
+        "react-hot-toast": "^2.4.0",
+        "typescript": "4.9.5",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.13",
