--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/node": "18.14.0",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
+        "@uiball/loaders": "^1.2.6",
         "add": "^2.0.6",
         "axios": "^1.3.4",
         "cookie": "^0.5.0",
