--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.8",
         "react-hot-toast": "^2.4.0",
+        "react-modal": "^3.16.1",
         "typescript": "4.9.5",
         "yarn": "^1.22.19"
     },
