--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/node": "18.14.0",
         "@types/react": "18.0.28",
         "@types/react-dom": "18.0.11",
+        "@types/react-modal": "^3.13.1",
         "@uiball/loaders": "^1.2.6",
         "add": "^2.0.6",
         "axios": "^1.3.4",
@@ -30,6 +31,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.8",
         "react-hot-toast": "^2.4.0",
+        "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
         "typescript": "4.9.5",
         "yarn": "^1.22.19"
