--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jwt-decode": "^3.1.2",
         "next": "13.1.6",
         "next-cookies": "^2.0.3",
+        "nprogress": "^0.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.43.8",
@@ -37,6 +38,7 @@
         "yarn": "^1.22.19"
     },
     "devDependencies": {
+        "@types/nprogress": "^0.2.0",
         "autoprefixer": "^10.4.13",
         "postcss": "^8.4.21",
         "prettier": "^2.8.4",
