--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.3.4",
         "cookie": "^0.5.0",
         "cookies-next": "^2.1.1",
+        "date-fns": "^2.29.3",
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "jwt-decode": "^3.1.2",
