--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-hot-toast": "^2.4.0",
         "react-icons": "^4.8.0",
         "react-modal": "^3.16.1",
+        "react-papaparse": "^4.1.0",
         "typescript": "4.9.5",
         "yarn": "^1.22.19"
     },
